--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@toolz/use-synchronous-state": "^1.0.6",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-body-highlighter": "^2.0.5",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
